secure connectiion of src scripts

--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="nouislider/jquery.nouislider.min.css" rel="stylesheet">
     <link href="nouislider/jquery.nouislider.pips.min.css" rel="stylesheet">
@@ -28,9 +28,9 @@
     </div>
 </div>
 
-<script src="http://fb.me/react-with-addons-0.12.2.js"></script>
-<script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://fb.me/react-with-addons-0.12.2.js"></script>
+<script src="https://fb.me/JSXTransformer-0.12.2.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="nouislider/jquery.nouislider.all.min.js"></script>
 <script src="js/build/data-service.js"></script>
 <script src="js/build/app.js"></script> <!-- Uncomment for runtime transformation of JSX during development -->
